# docs/swagger.yaml
@@ -9,6 +9,13 @@ definitions:
       math:
         type: integer
     type: object
+  model.user:
+    properties:
+      email:
+        type: string
+      password:
+        type: string
+    type: object
   models.Error:
     properties:
       message:
@@ -28,7 +35,7 @@ definitions:
       password:
         type: string
     type: object
-host: localhost
+host: localhost:8080
 info:
   contact: {}
   description: Define an API
@@ -36,18 +43,11 @@ info:
   title: Restful API
   version: 1.0.0
 paths:
-  /contacts:
+  /data:
     get:
       consumes:
       - application/json
       description: 取得所有資料
-      parameters:
-      - description: 安全碼
-        in: body
-        name: token
-        required: true
-        schema:
-          type: string
       produces:
       - application/json
       responses:
@@ -62,7 +62,7 @@ paths:
       summary: get all datas
       tags:
       - Data
-  /contacts/{id}:
+  /data/{id}:
     get:
       consumes:
       - application/json
@@ -73,12 +73,6 @@ paths:
         name: id
         required: true
         type: integer
-      - description: 安全碼
-        in: body
-        name: token
-        required: true
-        schema:
-          type: string
       produces:
       - application/json
       responses:
@@ -99,18 +93,12 @@ paths:
       - application/json
       description: 登入
       parameters:
-      - description: 信箱
+      - description: 個人資料
         in: body
-        name: email
+        name: information
         required: true
         schema:
-          type: string
-      - description: 密碼
-        in: body
-        name: password
-        required: true
-        schema:
-          type: string
+          $ref: '#/definitions/model.user'
       produces:
       - application/json
       responses:
@@ -139,18 +127,12 @@ paths:
       - application/json
       description: 註冊
       parameters:
-      - description: 信箱
+      - description: 個人資料
         in: body
-        name: email
+        name: information
         required: true
         schema:
-          type: string
-      - description: 密碼
-        in: body
-        name: password
-        required: true
-        schema:
-          type: string
+          $ref: '#/definitions/model.user'
       produces:
       - application/json
       responses:
@@ -173,4 +155,6 @@ paths:
       summary: create a new account
       tags:
       - User
+schemes:
+- http
 swagger: "2.0"
